--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     />
   </head>
   <body>
-    <h1>Hello Bootstrap!</h1>
+     
+    <h1 class="lead">Hello Bootstrap!</h1>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
