--- a/index.html
+++ b/index.html
@@ -4,21 +4,41 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bootstrap Examples</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
-    />
+    <link href="css/bootstrap.css" rel="stylesheet" />
+    <style>
+      header {
+        background-color: grey;
+      }
+      header a {
+        color: white;
+      }
+      footer{
+        background-color: lightgray;
+      }
+    </style>
   </head>
   <body>
-     
-    <h1 class="lead">Hello Bootstrap!</h1>
+    <header>
+      <div class="container-fluid">
+        <a href="">Home</a>
+        <a href="">About</a>
+      </div>
+    </header>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"
-    ></script>
+    <main>
+      <div class="container-fluid">
+        <h1>Hello Bootstrap!</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos nisi reiciendis quasi, saepe asperiores omnis
+          dolorem ipsum dolore laudantium blanditiis sunt nulla magnam, quas quidem repellendus possimus corrupti itaque
+          alias.
+        </p>
+        <button>Save</button>
+      </div>
+    </main>
+    <footer>
+      <div class="container-fluid">Copyright</div>
+    </footer>
+    <script src="scripts/bootstrap.bundle.js"></script>
   </body>
 </html>
