--- a/grid.html
+++ b/grid.html
@@ -5,14 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bootstrap Examples</title>
     <link href="css/bootstrap.css" rel="stylesheet" />
+    <style>
+      .col,
+      .col-6 {
+        border: 1px solid black;
+      }
+    </style>
   </head>
   <body>
-    <div class="container">
-        <div class="row">
-           <div class="col">Column 1</div>
-           <div class="col">Column 2</div>
-           <div class="col">Column 3</div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-4">Column 1</div>
+        <div class="col-md-4">Column 2</div>
+        <div class="col-md-4">Column 3</div>
+      </div>
+      <div class="row">
+        <div class="col"><a href="">Column 1</a></div>
+        <div class="col">Column 2</div>
+        <div class="col">Column 3</div>
+        <div class="col">Column 4</div>
+        <div class="col">Column 5</div>
+        <div class="col">Column 6</div>
+        <div class="col">Column 7</div>
+        <div class="col">Column 8</div>
+        <div class="col">Column 9</div>
+        <div class="col">Column 10</div>
+        <div class="col">Column 11</div>
+        <div class="col">Column 12</div>
+      </div>
+      <!-- <div class="row">
+        <div class="col">Column 1</div>
+        <div class="col">Column 2</div>
+        <div class="col">Column 3</div>
+        <div class="col">Column 4</div>
+      </div>
+      
+      <div class="row">
+        <div class="col">
+          <img src="http://placehold.co/400" alt="" />
         </div>
+        <div class="col">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem voluptatibus culpa numquam reprehenderit
+            iste, earum cumque labore, nulla, sunt quidem vel eveniet dolor incidunt maiores ipsam nobis velit quia
+            nesciunt. Quidem culpa exercitationem, esse numquam velit corrupti soluta laudantium aspernatur aliquam
+            perferendis et.
+          </p>
+          <button class="btn btn-primary">Get Started</button>
+        </div>
+      </div> -->
     </div>
     <script src="scripts/bootstrap.bundle.js"></script>
   </body>
