stealing example complete

--- a/example1.html
+++ b/example1.html
@@ -37,6 +37,8 @@
               reprehenderit, consequatur quia unde alias a perferendis tempore explicabo saepe excepturi repellat
               possimus. Aut quae quos similique!
             </p>
+
+            <a class="btn btn-secondary" href="stealing.html">Get Started</a>
           </div>
         </div>
         <div class="row">
